create userRegister api,userLogin api, userVerification api,userForgotePassword api,userReset api, userChange api
